--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.12"
 Flask = "^3.0.3"
 Turbo-Flask = "^0.8.5"
 pydantic = "^2.9.2"
+flask-pydantic = "^0.12.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.1.1"
