--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ Flask = "^3.0.3"
 Turbo-Flask = "^0.8.5"
 pydantic = "^2.9.2"
 flask-pydantic = "^0.12.0"
+aiohttp = "^3.10.10"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.1.1"
