--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ Turbo-Flask = "^0.8.5"
 pydantic = "^2.9.2"
 flask-pydantic = "^0.12.0"
 aiohttp = "^3.10.10"
+isodate = "^0.7.2"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.1.1"
