--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,7 @@ Flask = {extras = ["async"], version = "^3.0.3"}
 Turbo-Flask = "^0.8.5"
 pydantic = "^2.9.2"
 flask-pydantic = "^0.12.0"
-aiohttp = "^3.10.10"
-isodate = "^0.7.2"
+yt-dlp = "^2024.11.4"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.1.1"
