--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pydantic = "^2.9.2"
 flask-pydantic = "^0.12.0"
 yt-dlp = "^2024.11.4"
 aiohttp = "^3.10.10"
+python-dotenv = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.1.1"
