--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,10 @@ python-dotenv = "^1.0.1"
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.1.1"
 
+
+[tool.poetry.group.test.dependencies]
+pytest = "^8.3.3"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
