--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ flake8 = "^7.1.1"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.3"
+pytest-mock = "^3.14.0"
 
 [build-system]
 requires = ["poetry-core"]
