--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ flake8 = "^7.1.1"
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.3"
 pytest-mock = "^3.14.0"
+coverage = "^7.6.7"
+pytest-asyncio = "^0.24.0"
 
 [build-system]
 requires = ["poetry-core"]
