--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -17,7 +17,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          sudo apt install poetry
+          sudo apt install pipx
+          pipx install poetry
           poetry install --with test
       - name: Test run tests
         run: |  
