--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -31,4 +31,4 @@ jobs:
           poetry run coverage run -m pytest -v -s tests/tests.py
       - name: Generate Coverage Report
         run: |  
-          poetry run coverage report -m
+          poetry run coverage xml
