Created badge generator

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -36,3 +36,6 @@ jobs:
           filename: coverage.xml
           badge: true
           format: markdown
+          output: both
+        run: |
+          python utils/update_coverage_badge.py
