--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -37,5 +37,6 @@ jobs:
           badge: true
           format: markdown
           output: both
+      - name: Write Coverage Badge
         run: |
           python utils/update_coverage_badge.py
