--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,13 +1,16 @@
 name: Run Unit Test via Pytest
 
-on: [push]
+on: [ push ]
+
+permissions:
+  contents: write
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.12"]
+        python-version: [ "3.12" ]
 
     steps:
       - uses: actions/checkout@v3
@@ -27,7 +30,7 @@ jobs:
         env:
           YOUTUBE_API_KEY: ${{ secrets.YOUTUBE_API_KEY }}
           COOKIE_FILE_PATH: "cookies.txt"
-        run: |  
+        run: |
           poetry run coverage run -m pytest -v -s tests/tests.py
           poetry run coverage xml
       - name: Generate Coverage Report
@@ -37,6 +40,20 @@ jobs:
           badge: true
           format: markdown
           output: both
+
+  submit-report:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [ "3.12" ]
+    steps:
       - name: Write Coverage Badge
         run: |
           python utils/update_coverage_badge.py
+      - name: Commit and push coverage badge
+        run: |
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git add coverage_badge.svg
+          git commit -m "Update coverage badge [skip ci]"
+          git push
