--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -40,7 +40,10 @@ jobs:
           badge: true
           format: markdown
           output: both
-
+      - uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: 'code-coverage-results.md'
   submit-report:
     runs-on: ubuntu-latest
     strategy:
@@ -48,7 +51,16 @@ jobs:
         python-version: [ "3.12" ]
     needs:
       - test
+
     steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+      - uses: actions/download-artifact@v4
+        with:
+          name: coverage-report
+          path: 'code-coverage-results.md'
       - name: Write Coverage Badge
         run: |
           python utils/update_coverage_badge.py
