--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -40,9 +40,10 @@ jobs:
           badge: true
           format: markdown
           output: both
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v4
         with:
           name: coverage-report
+          path: "*coverage*"
   submit-report:
     runs-on: ubuntu-latest
     strategy:
@@ -56,7 +57,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v4
         with:
           name: coverage-report
       - name: Write Coverage Badge
