--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -67,6 +67,6 @@ jobs:
         run: |
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
-          git add coverage_badge.svg
+          git add README.md
           git commit -m "Update coverage badge [skip ci]"
           git push
